Actualización del proyecto